CURRENT/css/index.css
html {
	background-color: #000060;
	/*height: 100vh;*/
	margin: auto;
	margin-top: 5px;
	/* padding: 2px; */
	/* border: 1px solid darkslategray; */
	width:1300px;
	width: 1330px;
	padding: 2px 2px 2px 2px;
}

body {
	/* background-color:green; */
	/* background-color: #000060; */
	/*background-color: #336699;*/
	/*height: 100vh;*/
	margin: auto;
	/* padding: 3px; */
	overflow: hidden;
	/* width:1300px; */
	/* width: 1355px; */
	width: 100%;
}

div#wrapAll {
	padding: 5px;
	background-color: #000060;
	background-color: rgb(57, 60, 169);
	border-radius: 10px;
}

div#top_panel {
	position: relative;
	left: 1px;
	background-color: antiquewhite;
	/* background-color: #336699; */
	background-color: #000060;
	height: 45px;
	width: 1316px;
	padding: 5px 0px 0px 0px;
	border-radius: 10px;
}

div#top_panel_left {
	position: relative;
	top: 1px;
	left: 0px;
	/*background-color: #336699;*/
	width: 370px;
	height: 100%;
	display: inline-block;
	vertical-align: top;
}

div#topNavMenu {
	height: 42px;
	border-top-left-radius: 20px;
	border-top-right-radius: 20px;
	position: relative;
	border: 2px solid #000060;
	border-bottom: 0px solid black;
	background-color: #336699;
	position: relative;
	top: 0px;
	padding-top: 2px;
	left: 0px;
}

.navButton {
	display: inline-block;
	/* vertical-align:top; */
	background-color: goldenrod;
	height: 23px;
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;
	border: 2px solid #000060;
	padding: 5px;
	font-size: 24px;
	line-height: 23px;
	position: relative;
	text-decoration: underline;
	font-weight: bold;
	top: 3px;
	left: 5px;
	color: #1d1e21;
}

div#top_panel_right {
	position: absolute;
	top: 6px;
	right: 55px;
	/* background-color: #336699; */
	width: 320px;
	height: 32px;
	/*display: inline-block;*/
	vertical-align: top;
	text-align: center;
	padding: 3px;
	background-color: darkgoldenrod;
	border-radius: 5px;
	border: 2px solid #000060;
	box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5); */
}

div#top_panel_right_gamemanager {
	position: absolute;
	top: 6px;
	right: 55px;
	/* background-color: #336699; */
	width: 320px;
	height: 32px;
	/*display: inline-block;*/
	vertical-align: top;
	text-align: center;
	padding: 3px;
	background-color: darkgoldenrod;
	border-radius: 5px;
	border: 2px solid #000060;
}

#gameMenu_select {
	width: 180px;
	height: 50%;
	font-weight: bold;
	vertical-align: top;
	font-size: 12px;
}

#gameMenu_select2 {
	width: 180px;
	height: 50%;
	font-weight: bold;
	vertical-align: top;
	font-size: 12px;
}

input#stopEmulator_button {
	width: 60px;
	height: 50%;
	/* margin-top: 1px; */
	font-weight: bold;
	vertical-align: top;
	font-size: 12px;
}

input#restartEmulator_button {
	width: 60px;
	height: 50%;
	/* margin-top: 1px; */
	font-weight: bold;
	vertical-align: top;
	font-size: 12px;
}

#top_panel_settings_gear {
	position: absolute;
	top: 6px;
	right: 5px;
	background-image: url(../img/settingsGear.png);
	background-repeat: no-repeat;
	background-size: 100% 100%;
	/*position: absolute;*/
	width: 42px;
	height: 38px;
	/* height: 92%; */
	/*top: 1px;*/
	/*right: 5px;*/
	background-color: darkgoldenrod;
	border-radius: 5px;
	border: 2px solid #000060;
	box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
}

.navButton:hover {
	transform: scale(1.05);
	background-color: gold;
	/* background-color: darkgoldenrod; */
}

.navButton:active {
	transform: scale(0.95);
	/* background-color: gold; */
	background-color: goldenrod;
}

#content{
	border: 2px solid #000060;
	/* min-height: 650px; */
	background-color: #336699;
	margin: 0px 1px 0px 1px;
	padding-bottom: 15px;
	border-radius: 0px 0px 10px 10px;
}


#middle {text-align: center;padding-top: 15px;}
#VIEW_gamedbmanager{
	/*background-color: darkgray;*/
	/*margin: auto;*/
	/*margin-bottom: 15px;*/
	/*width: 600px;*/
	/* height: 80vh; */
	/* height: inherit; */
	/* padding: 5px; */
	/*padding-bottom: 10px;*/
	/*overflow: auto;*/
	/*border-radius: 15px;*/
	position: relative;
}
#VIEW_gamedbmanager_container{
	background-color: darkgray;
	margin: auto;
	margin-bottom: 15px;
	width: 600px;
	/* height: 80vh; */
	/* height: inherit; */
	/* padding: 5px; */
	padding-bottom: 10px;
	overflow: auto;
	border-radius: 15px;
	position: relative;
}
#VIEW_emulator{
	position:relative;
}
#emscripten_iframe_container iframe {height: 100%;width: 100%;padding: 0px;margin: auto;}
.gameframe_{
	width: 900px;
	/* height: 655px; */
	margin: 0 auto;
	padding: 0px;
	/* box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5); */
	box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.5);
	background-color: #ab8118;
	overflow: hidden;
	position: relative;
	border-radius: 20px;
	border: 5px solid #000060;
	border: 5px solid rgb(57, 60, 169);
}
.gameframe_borders{background-color: darkgoldenrod;}
#emscripten_iframe 		 	 {z-index:5;}
.gameframe_border_top    	 {margin: 0 auto;padding: 0px;background-size: 36px;background-image: url('../img/uzebox-logo-best_reasonably_small.png');vertical-align:top;width:100%;height: 35px;/* background-color:blue; *//* background-color: black; */position: relative;/* top: 0px; */}
.gameframe_border_left   	 {position: absolute;width: 110px;height: 100%;/* background-color: black; *//* background-color: blue; *//* background-color: yellow; */vertical-align: top;left: 0px;top: 0px;background-size: 115px;background-size: 100% 100%;background-image: url(../img/uzebox-logo-best_reasonably_small.png);/* background-image: url(../img/lborder1-min.png); */background-repeat: no-repeat;}
#emscripten_iframe_container {
	position: relative;
	left: 0px;
	/*height: 440px;*/
	height: 465px;
	width: 630px;
	margin: auto;
	padding: 0px;
	outline: 0px solid black;
	border: 0px solid black;
	z-index: 500;
}
.gameframe_border_right  	 {
	position: absolute;
	width: 110px;
	height: 100%;
	/*background-color: black;*/
	/* background-color: blue; */
	vertical-align: top;
	right: 0px;
	top: 0px;
	background-size: 115px;
	background-size: 100% 100%;
	background-image: url(../img/uzebox-logo-best_reasonably_small.png);
	background-image: url(../img/lborder1.png);
}
.gameframe_border_bottom    	 {margin: 0 auto;padding: 0px;background-size: 36px;background-image: url('../img/uzebox-logo-best_reasonably_small.png');vertical-align:top;width:100%;height: 35px;/* background-color:red; *//* background-color: black; *//* background-color: blue; */position: relative;/* bottom: -15px; *//* top: 15px; */}
/*.gameframe_border{*/
/*	background-image: url('../img/uzebox-logo-best_reasonably_small.png');*/
/*	background-repeat-y: left top;*/
/*	display:inline-block;*/
/*	padding: 0px 100px 0px 100px;*/
/*	background-size: 32px 32px;*/
/*	box-shadow: 2px 2px 10px 5px rgba(138,43,226,0.5);*/
/*	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);*/
/*	z-index:5;*/
	/* position: relative; */
/*}*/

#progressBar{
	background-image: url('../img/ProgressBar.gif');
	width: 100%;
	height: 40%;
	background-size: 100% 100%;
	background-repeat: no-repeat;
	position: relative;
	top: 1px;
	margin: auto;
	display: none;
}
#progressBar2{
	background-image: url('../img/ProgressBar.gif');
	width: 100%;
	height: 40%;
	background-size: 100% 100%;
	background-repeat: no-repeat;
	position: relative;
	top: 1px;
	margin: auto;
	display: none;
}
#progressBar.show, #progressBar2.show{ display: block;}

.views{display:none;}
.views.show{display:block;}

.panels{display:none;}
.panels.show{display:block;}

#completeData_1game{display:inline-block;width:50%;vertical-align:top;}
#completeData_1game td input[type='text']{width:100%;}
#completeData_1game td:nth-child(1){text-align:left;}
#completeData_1game td textarea{width:100%;}

#completeData_1game_description_container{display:inline-block; width:45%;vertical-align:top;}
#completeData_1game_description_textarea{
	margin: 0px;
	height: 160px;
	width: 245px;
}

#completeData_1game_buttons{ text-align:center; }
#completeData_1game_buttons input[type='button']{ width:45%; }
/*#gamefilelist{min-height:2em;}*/

#middle_cont1{position: relative;/* height: 570px; */}


#filemanager_section{
	text-align: left;
	width: 550px;
	margin: auto;
	border: 1px solid black;
	margin-top: 10px;
	padding: 10px;
	background-color: lightgray;
	border-radius: 10px;
	/* position: relative; */
}
#filemanager_section h3{
	text-align: center;
}

#filesInDirectory_table{
	margin:auto;
	width: 100%;
}

input#newFileUpload_save {
	width: 29%;
}

input#newFileUpload_browse {
	width: 69%;
}

#gamedata_section{
	border:1px solid black;
	margin: auto;
	margin-top: 10px;
	padding: 10px;
	width: 550px;
	background-color: lightgray;
	border-radius: 10px;
	position:relative;
}
#gamedb_new{
	width:50px;
	height: 25px;
	background-color:yellow;
	position:absolute;
	right: 10px;
	top: 2px;
	border: 2px solid #000060;
	font-weight: bold;
	font-size: 16px;
	line-height: 25px;
}
#gamedb_new:hover{ transform: scale(1.05); }
#gamedb_new:active{ transform: scale(0.95); }
#gamedb_del{
	width:50px;
	height: 25px;
	background-color:red;
	position:absolute;
	right: 65px;
	top: 2px;
	border: 2px solid #000060;
	font-weight: bold;
	font-size: 16px;
	line-height: 25px;
}
#gamedb_del:hover{ transform: scale(1.05); }
#gamedb_del:active{ transform: scale(0.95); }

#darkener_modal_1{
    position:fixed;
    top:0px;
    left:0px;
    width:100%;
    height:100%;
    background-color: rgba(0, 0, 0, 0.5);
    display:none;
    z-index: 100;
}
#darkener_modal_1.show{
	display:block;
}
#modal_1{
	background-color: rgba(89, 160, 230, 1);
	color: black;
	border: 5px solid #000060;
	border-radius: 10px;
	z-index: 101;
	display:none;
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	width: 530px;
	padding: 10px;
	padding-top: 0px;
	height: 300px;
	margin: auto;
	/* margin-top: 50px; */
	text-align: left;
	box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.70);
}
#modal_1.show{
	display:block;
}

#userFileControls{
	position:absolute;
	top: 5px;
	right: 5px;
	width: 170px;
	height: 300px;
	padding: 0px 0px 0px 0px;
	background-color:goldenrod;
}

#emulatorControls{
	position:absolute;
	top: 5px;
	left: 5px;
	 /*width:150px;*/
	 /*height:200px;*/
	padding: 0px 0px 0px 0px;
	background-color:goldenrod;
}
.emulatorControls_buttons{
	width: 150px;
	height: 18px;
	/* line-height: 50px; */
	font-weight: bold;
	font-size: 18px;
	background-color:darkgoldenrod;
	margin: 5px;
	padding: 5px;
	text-align: left;
}
.emulatorControls_buttons:hover{ background-color:gold;transform: scale(1.05); }
.emulatorControls_buttons:active{ transform: scale(0.95); }

.emulatorControls_info{
	width: 150px;
	height: 70px;
	/*line-height: 50px;*/
	font-weight: bold;
	font-size: 18px;
	background-color:darkgoldenrod;
	margin: 5px;
	padding: 5px;
	word-wrap: break-word;
	text-align: left;
}

.userGameFileLink{
	text-decoration:underline;
	color:blue;
	font-weight:bold;
}
.userGameFileLink:hover{
	text-color:blue;
	color:yellow;
}

